--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "matanyadaev/laravel-eloquent-spatial": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
